--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -10,3 +10,4 @@ sql:
         sql_package: "pgx/v5"
         emit_json_tags: true
         emit_pointers_for_null_types: false
+        emit_empty_slices: true
