--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -9,5 +9,6 @@ sql:
         out: "db/sqlc"
         sql_package: "pgx/v5"
         emit_json_tags: true
+        emit_interface: true
         emit_pointers_for_null_types: false
         emit_empty_slices: true
